HOTFIX: Fixed z-index on floating menus

--- a/modules/styles/style.css
+++ b/modules/styles/style.css
@@ -270,7 +270,7 @@ figure {
   top: 50%;
   right: 76px;
   transform: translateY(-62%);
-  /* z-index: 1; */
+  z-index: 1;
   background-color: var(--primarylight);
   border-radius: 10px;
   width: 433px;
@@ -476,7 +476,7 @@ figure {
   top: 50%;
   right: 76px;
   transform: translateY(-188%);
-  /* z-index: 1; */
+  z-index: 1;
   background-color: var(--primarylight);
   border-radius: 10px;
   padding: 0.75rem 0.5rem;
@@ -503,7 +503,7 @@ figure {
   top: 50%;
   right: 76px;
   transform: translateY(-5%);
-  /* z-index: 1; */
+  z-index: 1;
   background-color: var(--primarylight);
   border-radius: 10px;
   padding: 0.75rem 0.5rem;
@@ -522,7 +522,7 @@ figure {
   top: 50%;
   right: 76px;
   transform: translateY(-86%);
-  /* z-index: 1; */
+  z-index: 1;
   background-color: var(--primarylight);
   border-radius: 10px;
   padding: 0.75rem 0.5rem;
